# starforge

./: .env.example  .gitignore  README.md  pyproject.toml  test_mast.py
agents/: __init__.py  analysis_agent.py  literature_agent.py  query_agent.py  report_agent.py  root_agent.py
demo/: demo_trappist1.py
demo/sample_reports/: trappist1e_brief.md
docs/: kaggle_writeup.md
mcp_servers/arxiv_astro/: server.py
mcp_servers/exoplanet_archive/: server.py
mcp_servers/mast_archive/: server.py
mcp_servers/skyview/: server.py
memory/: __init__.py  research_memory.py
tests/: test_agents.py  test_mcp_quick.py
ui/: app.py
