[project]
name = "starforge"
version = "0.1.0"
description = "StarForge — AI Exoplanet Research Assistant powered by Google ADK with multi-agent orchestration and custom MCP servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "StarForge Team"}
]

dependencies = [
    "google-adk",
    "google-genai",
    "mcp>=1.27,<2",
    "astroquery>=0.4",
    "astropy",
    "requests>=2.31",
    "gradio>=4.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "mcp_servers*", "tools*", "memory*", "ui*"]
